--- a/其他/记录.md
+++ b/其他/记录.md
@@ -561,3 +561,908 @@ public class BitStatesUtils {
 
    ![image-20211204181946721](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211204181946721.png)
 
+## 9.Oauth2授权模式
+
+这是介绍文章:http://www.ruanyifeng.com/blog/2014/05/oauth_2_0.html 
+
+登录所用的协议就是Oauth2-----安全不会涉及第三方用户账号密码
+
+OAuth 2.0定义了四种授权方式:
+
+1. 授权码模式
+
+   ![image-20211207160245436](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211207160245436.png)
+
+​		授权流程:		
+
+```
+1. 用户访问客户端，后者将前者导向认证服务器
+2. 用户选择是否给予客户端授权
+3. 假设用户给予授权，认证服务器将用户导向客户端事先指定的"重定向URI"（redirection URI），同时附上一个授权码
+4. 客户端收到授权码，附上早先的"重定向URI"，向认证服务器申请令牌。这一步是在客户端的后台的服务器上完成的，对用户不可见
+5. 认证服务器核对了授权码和重定向URI，确认无误后，向客户端发送访问令牌（access token）和更新令牌（refresh token）
+```
+
+2. 简化模式
+
+理解:简化模式（implicit grant type）不通过第三方应用程序的服务器，直接在浏览器中向认证服务器申请令牌，跳过了"授权码"这个步骤，因此得名。所有步骤在浏览器中完成，令牌对访问者是可见的，且客户端不需要认证
+
+> 省略了授权码步骤, 在客户端同意授权以后直接往第三方服务获取token
+
+3. 密码模式
+
+理解:密码模式（Resource Owner Password Credentials Grant）中，`用户向客户端提供自己的用户名和密码。客户端使用这些信息，向"服务商提供商"索要授权`。
+
+在这种模式中，用户必须把自己的密码给客户端，但是客户端不得储存密码。这通常用在用户对客户端高度信任的情况下，比如客户端是操作系统的一部分，或者由一个著名公司出品。而认证服务器只有在其他授权模式无法执行的情况下，才能考虑使用这种模式
+
+> 用户向客户端发起登录请求, 然后第三方就会返回给客户端提供自己的账号和密码, 通过账号和密码来登录授权, 不过这个账号和密码是第三方的账号,不会去涉及客户端去保留之类的, 也就是说这个账号密码不会去在客户端做一个保存!---类似于我们在游戏授权的时候都是需要我们进行登录QQ来进行授权
+
+4. 客户端模式
+
+理解:客户端模式（Client Credentials Grant）指`客户端以自己的名义，而不是以用户的名义`，向"服务提供商"进行认证。严格地说，客户端模式并不属于OAuth框架所要解决的问题。在这种模式中，用户直接向客户端注册，客户端以自己的名义要求"服务提供商"提供服务，其实不存在授权问题。
+
+> 以客户端自己的名义去往第三方获取资源, 不适合做登录, 只适合做一些自家平台的获取资源登录等等!
+>
+> 应用往第三方平台直接获取token,不会经过用户确认! 这种呢就不会存在授权啊这些问题!
+
+### 9.1.JWT
+
+jwt是一种令牌!它的出现就是为了解决在之前的使用的过程中我们每次访问资源都要通过资源服务器远程调用认证服务器进行token的校验和授权才能访问到资源。但是如果我们的`访问比较频繁`，并发比较高，那么这种权限校验方式无疑比较消耗性能。而JWT就是用来`解决远程校验令牌的问题`!
+
+
+
+JWT:是一种轻巧的规范!这个规范允许我们使用JWT在`用户和服务器`之间传递安全可靠的信息
+
+**理解**:使用JWT生产的Token是安全的，可以理解成就是在我们之前的Token基础上做了加密处理,实现了数据的安全传输，也实现了资源服务器对Token的自校验
+
+特点:
+
+1. 基于JSON，方便解析
+
+2. 可以在令牌中定义内容，方便扩展
+
+3. 非对称加密算法即数字签名，JWT防篡改
+
+4. 资源服务使用JWT可以不依赖认证服务即可完成授权
+
+---
+
+组成部分:https://www.jianshu.com/p/99a458c62aa4
+
+包含三部分组成:
+
+1. 头部(header):
+
+   ```json
+   JSON格式，描述JWT的最基本的信息，如签名算法等效果如下：
+   {"type":"JWT","alg":"HS256"} 这里指明了签名算法是HS256算法。在使用过程中会对该JSON进行BASE64编码如：yJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9
+   ```
+
+2. 载荷(playload):
+
+   ```
+   JSON格式，包含了需要的数据内容，也需要BASE64编码。包含三部分
+   1. 标准中注册的声明（建议但不强制使用）
+       iss: jwt签发者
+       sub: jwt所面向的用户, zs
+       aud: 接收jwt的一方
+       exp: jwt的过期时间，这个过期时间必须要大于签发时间
+       nbf: 定义在什么时间之前，该jwt都是不可用的.
+       iat: jwt的签发时间
+       jti: jwt的唯一身份标识，主要用来作为一次性token
+   2. 公共的声明:
+   	公共的声明可以添加任何的信息，一般添加用户的相关信息或其他业务需要的必要信息.但不建议添加敏感信息，因为该部分在客户端可解密
+   3. 私有的声明:
+   	私有声明是提供者和消费者所共同定义的声明，一般不建议存放敏感信息，因为base64是对称解密的，意味着该部分信息可以归类为明文信息
+   	
+   定义一个payload: 如 {"sub":"1234","name":"xxx","admin":true} 进行Base64编码后得到JWT第二部分如 eyJzdWIiOiIxMjM0NTY3ODkbmFtZSI6IkpvaG4gRG9lIiwiYW...
+   ```
+
+3. 签名(signature):
+
+   ```
+   通过指定的算法生成哈希，以确保数据不会被篡改。jwt的第三部分是一个签证信息，通过指定的算法生成哈希，以确保数据不会被篡改，这个签证信息由三部分组成：head(base64编码后的)；playload(base64编码后的)；secret(秘钥)
+   签名后的密文构成JWT第三部分如：ThecMfgYjtoys3JX7dpx3hu6pUm0piZ0tXXr
+   ```
+
+> 最后JWT构建的内容编码后的字符串:“eyJhbGciOiJIUzI1NiJ9.eyJqdGkiOiI4ODgiLCJzdWIiOiLlsI_nmb0iLCJpYXQiOjE1NTc5MDQxODF9.ThecMfgYjtoys3JX7dpx3hu6pUm0piZ0tXXreFU_u3Y”
+
+
+
+理解:其实这三部分分别是:
+
+1. 头部: 存放JWT基本信息-->以JSON结构存储然后以Base64转码
+2. 载荷: 存放主要的数据内容-->以JSON结构存储然后以Base64转码
+3. 签名: 通过前两个部分再加一个秘钥通过算法生成一个签证信息-->Base64
+
+然后最终的JWT就是将上面每部分的Base64再一次Base64编码就是最终的字符!
+
+### 9.2.SpringCloud Oauth2
+
+​	SpingSecurityOauth2实现了Oatuh2，SpingSecurityOauth2分为两个大块，一者为`认证授权`(Authorization Server)服务和`资源服务`(Resource server);
+
+**认证授权服务**一般负责执行`认证逻辑`(登录)和`加载用户的权限`(给用户授权)，以及认证成功后的`令牌颁发` ，
+
+**资源服务器**一般指的是我们系统中的微服务(被访问的微服务)，在资源服务器需要对用户的令牌(`认证成功与否`)，以及`授权(是不是有访问权限)做检查`
+
+授权服务和资源服务的流程图：
+
+![image-20211207163658139](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211207163658139.png)
+
+以上是一种SpringCloud Oauth2的认证和授权的流程图!
+
+![image-20211207163742678](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211207163742678.png)
+
+这个就是一种标准的`授权码模式`!先获取授权码再通过授权码获取token, 根据token去请求资源信息!
+
+----
+
+1. 授权服务配置类:
+
+   ```java
+   package cn.miao.config;
+   
+   import org.springframework.beans.factory.annotation.Autowired;
+   import org.springframework.context.annotation.Bean;
+   import org.springframework.context.annotation.Configuration;
+   import org.springframework.http.HttpMethod;
+   import org.springframework.security.authentication.AuthenticationManager;
+   import org.springframework.security.crypto.password.PasswordEncoder;
+   import org.springframework.security.oauth2.config.annotation.configurers.ClientDetailsServiceConfigurer;
+   import org.springframework.security.oauth2.config.annotation.web.configuration.AuthorizationServerConfigurerAdapter;
+   import org.springframework.security.oauth2.config.annotation.web.configuration.EnableAuthorizationServer;
+   import org.springframework.security.oauth2.config.annotation.web.configurers.AuthorizationServerEndpointsConfigurer;
+   import org.springframework.security.oauth2.config.annotation.web.configurers.AuthorizationServerSecurityConfigurer;
+   import org.springframework.security.oauth2.provider.client.JdbcClientDetailsService;
+   import org.springframework.security.oauth2.provider.code.JdbcAuthorizationCodeServices;
+   import org.springframework.security.oauth2.provider.token.AuthorizationServerTokenServices;
+   import org.springframework.security.oauth2.provider.token.DefaultTokenServices;
+   import org.springframework.security.oauth2.provider.token.TokenEnhancerChain;
+   import org.springframework.security.oauth2.provider.token.TokenStore;
+   import org.springframework.security.oauth2.provider.token.store.InMemoryTokenStore;
+   import org.springframework.security.oauth2.provider.token.store.JwtAccessTokenConverter;
+   import org.springframework.security.oauth2.provider.token.store.JwtTokenStore;
+   
+   import javax.sql.DataSource;
+   import java.util.Arrays;
+   
+   //授权服务配置
+   @Configuration
+   //开启授权服务配置
+   @EnableAuthorizationServer
+   public class AuthorizationServerConfig extends AuthorizationServerConfigurerAdapter {
+   
+       //1.客户端详情配置(请求参数)
+       @Autowired
+       private DataSource dataSource ;
+   
+       @Autowired
+       private PasswordEncoder passwordEncoder ;
+   
+       //1.1.注册客户端详情Bean,基于数据库,自动操作表：oauth_client_details
+       @Bean
+       public JdbcClientDetailsService jdbcClientDetailsService(){
+           JdbcClientDetailsService jdbcClientDetailsService = new JdbcClientDetailsService(dataSource);
+           //数据库的秘钥使用了PasswordEncoder加密
+           jdbcClientDetailsService.setPasswordEncoder(passwordEncoder);
+           return jdbcClientDetailsService;
+       }
+   
+       /**
+        * 客户端详情：配置客户端请求的参数
+        *
+        * @param clients 客户
+        * @throws Exception 异常
+        */
+       @Override
+       public void configure(ClientDetailsServiceConfigurer clients) throws Exception {
+           clients.withClientDetails(jdbcClientDetailsService());
+       }
+   
+       //2.授权服务端点配置(授权码，令牌)
+   
+       @Autowired
+       private AuthenticationManager authenticationManager ;
+   
+       //2.1.定义授权码服务,连接数据库 oauth_code
+       @Bean
+       public JdbcAuthorizationCodeServices jdbcAuthorizationCodeServices(){
+           return new JdbcAuthorizationCodeServices(dataSource);
+       }
+       //2.2.令牌服务配置
+       //令牌的管理服务
+       @Bean
+       public AuthorizationServerTokenServices tokenService(){
+           //创建默认的令牌服务
+           DefaultTokenServices services = new DefaultTokenServices();
+           //指定客户端详情配置
+           services.setClientDetailsService(jdbcClientDetailsService());
+           //支持产生刷新token
+           services.setSupportRefreshToken(true);
+           //token存储方式
+           services.setTokenStore(tokenStore());
+   
+           //设置token增强 - 设置token转换器
+           TokenEnhancerChain tokenEnhancerChain = new TokenEnhancerChain();
+           tokenEnhancerChain.setTokenEnhancers(Arrays.asList(jwtAccessTokenConverter()));
+           services.setTokenEnhancer(tokenEnhancerChain);  //jwtAccessTokenConverter()
+   
+           return services;
+       }
+   
+       //2.3.配置Token的存储方案
+       //基于内存的Token存储
+       @Bean
+       public TokenStore tokenStore(){
+   //        return new InMemoryTokenStore();
+           return new JwtTokenStore(jwtAccessTokenConverter());
+       }
+   
+       //2.4.配置令牌转换器 ，设置JWT签名密钥。它可以是简单的MAC密钥，也可以是RSA密钥
+       private final String sign_key  = "123";
+   
+       //JWT令牌校验工具
+       @Bean
+       public JwtAccessTokenConverter jwtAccessTokenConverter(){
+           JwtAccessTokenConverter jwtAccessTokenConverter = new JwtAccessTokenConverter();
+           //设置JWT签名密钥。它可以是简单的MAC密钥，也可以是RSA密钥
+           jwtAccessTokenConverter.setSigningKey(sign_key);
+           return jwtAccessTokenConverter;
+       }
+   
+       /**
+        * 授权服务断点：配置授权码和令牌的管理/存储方式
+        *
+        * @param endpoints 端点
+        * @throws Exception 异常
+        */
+       @Override
+       public void configure(AuthorizationServerEndpointsConfigurer endpoints) throws Exception {
+           endpoints
+               //1.密码授权模式需要 密码模式，需要认证管理器
+               .authenticationManager(authenticationManager)
+               //2.授权码模式服务
+               .authorizationCodeServices(jdbcAuthorizationCodeServices())
+               //3.配置令牌管理服务
+               .tokenServices(tokenService())
+               //允许post方式请求
+               .allowedTokenEndpointRequestMethods(HttpMethod.POST);
+       }
+   
+   
+       /**
+        * 授权服务安全配置：配置哪些路径放行(检查token的路径要放行)
+        *
+        * @param security 安全
+        * @throws Exception 异常
+        */
+       @Override
+       public void configure(AuthorizationServerSecurityConfigurer security) throws Exception {
+           security
+                   //对应/oauth/check_token ，路径公开
+                   .checkTokenAccess("permitAll()")
+                   //允许客户端进行表单身份验证,使用表单认证申请令牌
+                   .allowFormAuthenticationForClients();
+       }
+   
+   }
+   ```
+
+分析:
+
+SpringSecurityOauth2提供了AuthorizationServerConfigurerAdapter适配器类来作为认证授权服务的配置,其中有三个方法源码如下：
+
+```java
+public class AuthorizationServerConfigurerAdapter  {
+    //客户端详情：配置客户端请求的参数
+    public void configure(ClientDetailsServiceConfigurer clients)...	
+    //授权服务断点：配置授权码和令牌的管理/存储方式
+    public void configure(AuthorizationServerEndpointsConfigurer endpoints)...
+    //授权服务安全配置：配置哪些路径放行(检查token的路径要放行)
+    public void configure(AuthorizationServerSecurityConfigurer security) ...
+}
+```
+
+作用分别如下：
+
+1. `ClientDetailsServiceConfigurer`：用来配置客户端详情服务：如配置客户端id(client_id)资源id、客户端密钥(secrect)、授权方式、scope等,可以基于内存或jdbc。(可以理解为是对浏览器向授权服务器获取授权码或令牌时需要提交的参数配置)
+2. `AuthorizationServerEndpointsConfigurer`:配置令牌的访问端点url和令牌服务，如配置如何管理授权码(内存或jdbc)，如何管理令牌(存储方式，有效时间等等)
+3. `AuthorizationServerSecurityConfigurer`: 用来配置令牌端点的安全约束，如配置对获取授权码，检查token等某些路径进行放行
+
+授权服务配置分析:
+
+![image-20211207165519707](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211207165519707.png)
+
+总结:
+
+授权服务配置了三个东西:
+
+1. `ClientDetailsServiceConfigurer`:配置客户端信息，如同做微信登录的时候获取授权码和令牌时需要传入很多的参数，这些参数就是客户端详情配置的参数
+
+2. `AuthorizationServerEndpointsConfigurer`:配置token相关端点，以及token如何存取，以及客户端支持哪些类型token
+
+3. `AuthorizationServerSecurityConfigurer`:配置了端点就要对端点配置约束
+
+----
+
+**授权码模式获取token:**
+
+先进行登录
+
+![image-20211207165841539](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211207165841539.png)
+
+第一步，通过浏览器获取授权码，GET访问:
+
+http://localhost:1100/oauth/authorize?client_id=webapp2&response_type=code&redirect_uri=http://www.baidu.com ，操作如下：
+
+![image-20211207165903812](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211207165903812.png)
+
+![image-20211207165910412](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211207165910412.png)
+
+第二步使用Postmain获取令牌，Post访问：
+
+Url: [http://localhost:1100/oauth/token](http://localhost:3000/oauth/token)?client_id=webapp2&client_secret=123&grant_type=authorization_code&code=gD8ZbB&redirect_uri=http://www.baidu.com ，
+
+操作如下：
+
+![image-20211207165932700](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211207165932700.png)
+
+---
+
+密码授权模式:
+
+在授权服务中我们配置了"password"密码模式,"authorization_code"授权码模式两种方式，接下来是测试“password”模式获取，将grant_type修改为“password” 添加username和password两个参数，去掉code参数:
+
+![image-20211207165958237](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211207165958237.png)
+
+----
+
+刷新token:
+
+http://localhost:3000/oauth/token?grant_type=refresh_token&refresh_token=刷新Token值&client_id=webapp&client_secret=secret
+
+校验token:
+
+http://localhost:3000/oauth/check_token?token=token值
+
+访问资源 ，请求头带参数： “Authorization= Bearer token的值“-->注意Bearer后面有个空格!
+
+----
+
+当获取到token以后携带token去访问资源服务,那么在资源服务中也需要这样去配置:
+
+```java
+package cn.miao.config;
+
+import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
+import org.springframework.security.config.annotation.method.configuration.EnableGlobalMethodSecurity;
+import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.oauth2.config.annotation.web.configuration.EnableResourceServer;
+import org.springframework.security.oauth2.config.annotation.web.configuration.ResourceServerConfigurer;
+import org.springframework.security.oauth2.config.annotation.web.configurers.ResourceServerSecurityConfigurer;
+import org.springframework.security.oauth2.provider.token.TokenStore;
+import org.springframework.security.oauth2.provider.token.store.JwtAccessTokenConverter;
+import org.springframework.security.oauth2.provider.token.store.JwtTokenStore;
+
+//ResourceServerConfigurer:资源服务器配置
+//@EnableResourceServer:开启资源服务配置
+@Configuration
+@EnableResourceServer
+@EnableGlobalMethodSecurity(prePostEnabled = true)
+public class ResourceServerConfig implements ResourceServerConfigurer {
+
+    //2.3.配置Token的存储方案
+    //基于内存的Token存储
+    @Bean
+    public TokenStore tokenStore(){
+        //return new InMemoryTokenStore();
+        return new JwtTokenStore(jwtAccessTokenConverter());
+    }
+
+    //2.4.配置令牌转换器 ，设置JWT签名密钥。它可以是简单的MAC密钥，也可以是RSA密钥
+    private final String sign_key  = "123";
+
+    //JWT令牌校验工具
+    @Bean
+    public JwtAccessTokenConverter jwtAccessTokenConverter(){
+        JwtAccessTokenConverter jwtAccessTokenConverter = new JwtAccessTokenConverter();
+        //设置JWT签名密钥。它可以是简单的MAC密钥，也可以是RSA密钥
+        jwtAccessTokenConverter.setSigningKey(sign_key);
+        return jwtAccessTokenConverter;
+    }
+
+    //授权服务安全配置
+    @Override
+    public void configure(ResourceServerSecurityConfigurer configurer) throws Exception {
+        //微服务的资源ID
+        configurer.resourceId("courseId");
+        //token的存储
+        configurer.tokenStore(tokenStore());
+    }
+
+    //资源的授权规则配置
+    @Override
+    public void configure(HttpSecurity httpSecurity) throws Exception {
+        httpSecurity.authorizeRequests()
+                .antMatchers("/courseType/crumbs/**",
+                        "/courseType/treeData",
+                        "/swagger-ui.html","/**").permitAll()
+                //校验scope必须为hrm ， 对应认证服务的客户端详情配置的clientId
+                .antMatchers("/**").access("#oauth2.hasScope('hrm')")
+                .anyRequest().authenticated()
+                .and().csrf().disable();
+
+    }
+}
+```
+
+测试:
+
+向资源服务器发起请求，请求头携带：`Authorization=Bearer token`值 ，如下:
+
+![image-20211207173649167](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211207173649167.png)
+
+​	这里我们已经成功的访问到真正的资源，请求资源之前，资源服务器会发送远程请求到授权服务器验证token的合法性，并且根据当前token获取权限列表，然后在进行授权，如果权限列表拥有资源(controller的方法)所需要的权限，即可访问成功;
+
+错误示范：
+
+如果Token是无效的会出现如下信息：
+
+![image-20211207173733432](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211207173733432.png)
+
+如果Token中的权限不包含资源所需要的权限会出现如下信息：
+
+![image-20211207173754158](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211207173754158.png)
+
+### 9.3. 微服务与微服务之间的授权
+
+为什么?
+
+​	当客户端先资源服务发起请求，请求头携带Token，在资源服务(A)需要校验Token进行访问授权，但是我们一个请求往往是需要多个微服务一起完成，如果A服务调用B服务调用C服务，那么A服务校验Token之后，B服务需不需要也校验Token呢？答案是当然的，因为每个微服务都是独立的都需要做好权限校验工作？那么如何实现服务之间的授权？
+
+
+
+解决方案:
+
+​	直接把客户端提交给资源服务的Token继续向下游资源服务提交，那么就需要在消费者服务A向提供者服务器B发起请求(Feign)的时候进行拦截(Feign的拦截器)，在拦截器中获取请求头中的Token添加到Fiegn的请求头中，这样一来Token就由A服务传递给了B服务，B服务就可以对Token进行校验了。如图
+
+![image-20211207174224358](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211207174224358.png)
+
+这样虽然在发起请求的时候拦截并手动的添加到目标服务的请求头中,可是如果遇到hystrix那么这也就会暴露出一个问题: `资源隔离`!
+
+![image-20211207174454312](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211207174454312.png)
+
+解决方案:
+
+![image-20211207174518001](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211207174518001.png)
+
+解决:
+
+理解:
+
+​	其实看到这张图也就懂了,在A服务向B服务发起调用的时候那么就需要将Token权限给带过去,那么这个过程是这样的: 首先一个请求会在A线程里执行,那么进入到Hystrix的线程池中因为hystrix的资源隔离的特性会让A请求不在A线程里执行而是更换新的线程B里面执行,那么这开始执行的线程和最后执行的线程是不一致的!所以我们需要修改线程池并发策略,在更换新的线程的时候手动的将开始的请求中的token手动添加到目标线程里面,然后还需要在B服务接收的时候需要使用Feigin拦截器去获取令牌然后放进请求头中!这样token才会进行目标的资源进行判断是否授权!
+
+
+
+请求拦截:
+
+```java
+//Fiegn拦截器----调用的那一方获取到的拦截器,如B服务
+@Component
+public class DefaultOAuth2FeignRequestInterceptor implements RequestInterceptor {
+
+    //请求头中的token
+    private final String AUTHORIZATION_HEADER = "Authorization";
+    
+    @Override
+    public void apply(RequestTemplate requestTemplate) {
+
+        //1.获取请求对象
+        ServletRequestAttributes servletRequestAttributes = (ServletRequestAttributes) RequestContextHolder.getRequestAttributes();
+        HttpServletRequest request = servletRequestAttributes.getRequest();
+
+        //2.从请求头获取到令牌
+        String authorization = request.getHeader(AUTHORIZATION_HEADER);
+
+        //3.把令牌添加到Fiegn的请求头
+        requestTemplate.header(AUTHORIZATION_HEADER,authorization);
+    }
+
+}
+```
+
+修改线程池并发策略:
+
+```java
+@Configuration
+@Slf4j
+public class FeignHystrixConcurrencyStrategy extends HystrixConcurrencyStrategy {
+
+    private HystrixConcurrencyStrategy hystrixConcurrencyStrategy;
+
+    public FeignHystrixConcurrencyStrategy() {
+        try {
+            this.hystrixConcurrencyStrategy = HystrixPlugins.getInstance().getConcurrencyStrategy();
+            if (this.hystrixConcurrencyStrategy instanceof FeignHystrixConcurrencyStrategy) {
+                return;
+            }
+            HystrixCommandExecutionHook commandExecutionHook =
+                    HystrixPlugins.getInstance().getCommandExecutionHook();
+            HystrixEventNotifier eventNotifier = HystrixPlugins.getInstance().getEventNotifier();
+            HystrixMetricsPublisher metricsPublisher = HystrixPlugins.getInstance().getMetricsPublisher();
+            HystrixPropertiesStrategy propertiesStrategy =
+                    HystrixPlugins.getInstance().getPropertiesStrategy();
+
+            HystrixPlugins.reset();
+            HystrixPlugins instance = HystrixPlugins.getInstance();
+            instance.registerConcurrencyStrategy(this);
+            instance.registerCommandExecutionHook(commandExecutionHook);
+            instance.registerEventNotifier(eventNotifier);
+            instance.registerMetricsPublisher(metricsPublisher);
+            instance.registerPropertiesStrategy(propertiesStrategy);
+        } catch (Exception e) {
+            System.out.println("策略注册失败");
+        }
+    }
+
+    @Override
+    public <T> Callable<T> wrapCallable(Callable<T> callable) {
+        //此时在 A 线程 ,拿到请求
+        RequestAttributes requestAttributes = RequestContextHolder.getRequestAttributes();
+        //新开线程，把请求传入进去
+        log.info("线程{} ， 拿到请求 {}", Thread.currentThread().getName(),requestAttributes);
+        return new WrappedCallable<>(callable, requestAttributes);
+    }
+
+    @Override
+    public ThreadPoolExecutor getThreadPool(HystrixThreadPoolKey threadPoolKey,
+                                            HystrixProperty<Integer> corePoolSize,
+                                            HystrixProperty<Integer> maximumPoolSize,
+                                            HystrixProperty<Integer> keepAliveTime,
+                                            TimeUnit unit, BlockingQueue<Runnable> workQueue) {
+        return this.hystrixConcurrencyStrategy.getThreadPool(threadPoolKey, corePoolSize, maximumPoolSize, keepAliveTime,
+                unit, workQueue);
+    }
+
+    @Override
+    public ThreadPoolExecutor getThreadPool(HystrixThreadPoolKey threadPoolKey,
+                                            HystrixThreadPoolProperties threadPoolProperties) {
+        return this.hystrixConcurrencyStrategy.getThreadPool(threadPoolKey, threadPoolProperties);
+    }
+
+    @Override
+    public BlockingQueue<Runnable> getBlockingQueue(int maxQueueSize) {
+        return this.hystrixConcurrencyStrategy.getBlockingQueue(maxQueueSize);
+    }
+
+    @Override
+    public <T> HystrixRequestVariable<T> getRequestVariable(HystrixRequestVariableLifecycle<T> rv) {
+        return this.hystrixConcurrencyStrategy.getRequestVariable(rv);
+    }
+
+    static class WrappedCallable<T> implements Callable<T> {
+        private final Callable<T> target;
+
+        //A线程扔过来的请求
+        private final RequestAttributes requestAttributes;
+
+        public WrappedCallable(Callable<T> target, RequestAttributes requestAttributes) {
+            this.target = target;
+            this.requestAttributes = requestAttributes;
+        }
+
+        @Override
+        public T call() throws Exception {
+            try {
+                //此时的代码在 B 线程 ，把请求设置到 RequestContextHolder
+                RequestContextHolder.setRequestAttributes(requestAttributes);
+                log.info("线程执行{} ， 设置请求到RequestContextHolder {}", Thread.currentThread().getName(),requestAttributes);
+                return target.call();
+            } finally {
+                RequestContextHolder.resetRequestAttributes();
+            }
+        }
+    }
+}
+```
+
+---
+
+获取当前登录用户的信息
+
+​	其实这种呢我们可以在用户登录认证的时候有一个`Userdetailservice`里查询用户信息进行修改, 一次性查询出想要的信息,然后通过JSON序列化返回给客户端, 然后下次我们想要的时候就会通过一个工具类去获取然后转换为实体类:
+
+```java
+@Component
+@Slf4j
+public class MyUserDetailService implements UserDetailsService {
+
+    @Autowired
+    private ILoginService loginService ;
+
+    @Autowired
+    private PermissionMapper permissionMapper ;
+
+    @Override
+    public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
+
+        Login login = loginService.selectOne(new EntityWrapper<Login>().eq("username", username));
+        Assert.notNull(login, "用户不存在!");
+
+        //查询用户的权限
+        List<GrantedAuthority> authorities = new ArrayList<>();
+        List<Permission> permissions = permissionMapper.selectPermissionsByUserId(login.getId());
+        if(CollUtil.isNotEmpty(permissions)){
+            authorities = permissions.stream().map(p -> new SimpleGrantedAuthority(p.getSn()) ).collect(Collectors.toList());
+        }
+
+        log.info("加载用户的权限 {}",authorities);
+        authorities.forEach(System.out::println);
+
+        //获取用户上下文信息, 那么可以用户登录的时候通过查询的login就查询出所需要的字段信息,放入token中
+        //下次获取的时候我们可以通过scurity中的ScurityContextHolder来获取用户的信息
+
+        Map<Object, Object> build = MapUtil.builder().put("id", login.getId()).put("username", login.getUsername()).put("tenantId", login.getTenantId()).put("tenantName", login.getTenantName()).build();
+        //用户名
+        return new User(JSONObject.toJSONString(build),
+                login.getPassword(),//密码
+                true,true,true,true,
+                authorities);//权限
+    }
+}
+```
+
+获取工具类:
+
+```java
+public class LoginContext {
+
+    public static Login getLogin(){
+        try {
+            SecurityContext context = SecurityContextHolder.getContext();
+            //这里就能获取到校验token中的user_name, 这里封装了我们想要的数据
+            String principal = (String)context.getAuthentication().getPrincipal();
+            return JSONObject.parseObject(principal, Login.class);
+        } catch (Exception e) {
+            e.printStackTrace();
+            return null;
+        }
+    }
+}
+```
+
+### 9.4 小结
+
+理解JWT:
+
+```
+jwt是一种规范!这个规范允许我们在用户和服务之间传递可靠的信息 , 传输使用的JSON结构来传输,又是存在数字签名所以传输时可靠的!并且使用token进行加密然后解密!    
+```
+
+好处:其实使用jwt这种token方案比之前的redis缓存也有一定的好处,之前需要依赖于redis服务去存储权限和用户信息去放在redis中,每次需要用到都需要去拿然后解析,而现在只需要将信息放在客户端,由客户端去保存信息,然后每次获取的时候携带到对应服务中然后解析获取权限, 依赖度也降低了!
+
+我们可以理解为就是在之前生成的token的基础之上进行了加密! 并且这种token方式无需放在redis缓存中而是存放在客户端, 客户端就存放的是用户的权限等信息, 所以资源服务就会根据这个token进行解密然后就会走security进行授权的流程!
+
+![image-20211207191754350](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211207191754350.png)
+
+
+
+对于Spring Security oauth2的权限和token,我总结分两大块:
+
+1. **认证服务**:登录认证授权和颁发token;
+2. **资源服务**:解析token获取权限判断是否有权限;
+
+整个的执行的流程:
+
+​	认证服务:
+
+```
+用户在浏览器通过表单登录,这时就会携带账号和密码提交到认证服务中,这时就会封装携带clientID和秘钥一起发送请求获取token,那么此时就会走scurity的认证流程,通过一层一层认证通过username查询用户,最后查询出用户信息和对应的权限信息一并返回,这时登录认证的工作就完成了,那么接下来就是走JWT的颁发token的一个过程: 根据clientID去客户端详情表中查询获取颁发token所需要的参数,然后根据scurity认证获取的权限信息利用JWT封装成一个密文, 这个密文就是转为Base64后的token,然后将其token返回给客户端!
+```
+
+​	资源服务:
+
+```
+在访问其他资源的时候就会携带上这个token去访问,那么在资源服务里就会根据在认证服务里根据密文生成的token,此时就会根据相同的秘文去解析整个token,解析后获取对应的权限列表和一些其他参数信息,然后就判断resourceID做一个资源的大的判断,然后接下来就会走scurity的授权流程根据方法上的注解的权限进行判断, 如果满足,哎就放行,如果不满足,哎就打回!
+```
+
+总结:
+
+![image-20211207182235873](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211207182235873.png)
+
+其实就往大的一个方向去说: 先认证后颁发token, 然后解析token然后走授权流程!------这就是JWT微服务token方案!
+
+----
+
+服务之间授权的理解:	
+
+```
+按照正常的调用过程中,我们会携带一个token去调用另一个服务,但是在调用过程中我们是使用的是HTTP调用,那么token是没有带过去的,那么就需要我们使用feigin拦截手动将请求头的token添加目标请求的请求头中!但是要知道feigin是集成了hystrix,那么我们知道hystrix里面有一个资源隔离的说法,一个信号量一个线程池; 就会造成A请求是在A线程里面,当经过hystrix的线程池中,就会将A线程更换为B线程去执行,那么此时请求头中的token也会丢失,所以解决办法:
+1. 信号量(自始至终都是一个线程)
+2. 修改线程池并发策略
+
+我们要做的就是第二个解决办法,就是在覆写线程池并发策略手动将A线程中的token放入到B线程中去! 然后在目标服务中使用feigin拦截器拦截并将B线程中的token放入到请求头中去!
+```
+
+为什么换个线程请求就不在了?
+
+​	因为首先A请求中的token是单个线程独有的,当执行到线程池这里就会新开一个线程,比如线程B, 那么之前的请求中的token在A线程有那么到线程B就不存在了!
+
+
+
+## 10.单点登录和无感刷新
+
+在微服务中发起请求将token通过zuul就会拦截token ,解决办法:
+
+zuul会默认认为浏览器请求头中会存在敏感信息,所以就会屏蔽拿不到token,所以解决办法就是在yaml中配置修改默认存在敏感信息即可!
+
+```yaml
+zuul:
+  sensitive-headers:     #把zuul忽略敏感请求头的配置覆盖为空
+```
+
+请求状态:
+
+401: 过期或者token不存在
+
+403: 没有权限
+
+----
+
+单点登录:
+
+概念:是指在一个网站登录那么其他的网站的就不需要登录了,就好比京东的网站,你在一个站点登录了那么在其他站点就不需要登录了!
+
+不同的站点服务器只要任一地方登录那么访问任何地方都是已经登录的状态!
+
+
+
+那么这个如何实现的呢?
+
+将之前存在localStorage中的token改存于cookie中, 然后将cookie中的domain修改为几个服务器域名共同访问,如: [www.hrm.com](http://www.hrm.com)  admin.hrm.com  那么就可以修改为 .hrm.com 那么只要包含这个域名下这个cookie都可以访问!
+
+如何修改本地hosts文件:
+
+```java
+127.0.0.1 admin.hrm.com
+127.0.0.1 user.hrm.com
+```
+
+以上就是模拟几个站点的域名
+
+然后在一个前端站点登录的时候:
+
+![image-20211207193055416](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211207193055416.png)
+
+将其添加cookie,注意此时domain作用域是`.hrm.com`,也就是说只要域名是.hrm.com后缀的都可以享有这个cookie!那么也就是说只要一次登录那么此时cookie就有了,那么其他站点访问资源的时候就会从cookie里面拿就获取用户的登录信息了!
+
+![image-20211207195236324](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211207195236324.png)
+
+-----
+
+无感刷新:
+
+概念: 如用户在浏览网页的时候如果突然token过期了那么此时就会影响客户的一个浏览体验,所以我们可以采用无感刷新让用户没有感觉一样的浏览网页!
+
+根据返回状态请重新刷新token,  然后获取token再覆盖本地的token,再 重新发起请求---无感token 对于用户来说是没有任何的感觉的!
+
+token存在过期的几种情况?
+
+1. 对于客户端:如果在cookie里那么也有过期时间就会自动消失
+2. 对于服务端:本身来讲token里面就有一个过期时间,如果到了过期时间你再去访问那么就会报出过期的异常信息!
+
+
+
+解决办法:
+
+1. 延长token的过期时间
+2. 使用刷新token去刷新获取token
+
+因为第一次登录获取token的时候就有一个本身的token还有一个刷新token, 那么我们可以利用刷新token来获取新的token然后存于客户端!
+
+
+
+实战:
+
+前端:添加请求响应拦截器
+
+这里判断了如果是401的响应代表Token过期，重新组装参数刷新Token,然后重新设置到localStorage,然后调用  ***\**axios\**\***.request 继续执行请求 ， 需要注意的是刷新Token的请求必须是同步的，因为我们需要拿到Token后才能继续发请求。
+
+```javascript
+//处理Token刷新========================================================================
+axios.interceptors.response.use(config => {
+    return config
+},error => {
+    if (error && error.response) {
+        console.log(error);
+        switch (error.response.status) {
+            case 401: return doRequest(error);
+            case 403: return doNoPerHandler(error);
+        }
+    }
+    Promise.reject(error)
+});
+function doNoPerHandler(error) {
+    alert("没访问权限");
+}
+async function doRequest (error) {
+    try {
+        //获取新的Token
+        const data = await getNewToken();
+        var token = data.data.resultObj.access_token;
+        var refresh_token = data.data.resultObj.refresh_token;
+        sessionStorage.setItem("U-TOKEN",token);
+        sessionStorage.setItem("R-TOKEN",refresh_token);
+        //继续执行上一次失败的请求
+        const res = await axios.request(error.config);
+        return res;
+    } catch(err) {
+        alert("登录失效,请重新登录");
+        sessionStorage.clear();
+        router.replace({ path:"/login" });
+        return err;
+    }
+}
+
+//刷新Token
+async function getNewToken() {
+    var refreshToken = sessionStorage.getItem('R-TOKEN');
+    if(refreshToken){
+        return await axios({
+            url: '/auth/login/refresh?refreshToken='+refreshToken+"&type=1",
+            method: 'post',
+            headers: {
+                'Content-Type':'application/x-www-form-urlencoded'
+            }
+        })
+    }else{
+        alert("登录失效,请重新登录");
+        sessionStorage.clear();
+        router.replace({ path:"/login" });
+    }
+}
+
+//处理Token刷新end================================================================
+```
+
+后台刷新:
+
+```java
+//系统刷新
+@RequestMapping(value="/refresh")
+public AjaxResult refresh(@RequestParam("refreshToken") String refreshToken,@RequestParam("type") Integer type){
+    AccessTokenVo accessTokenVo = loginService.refresh(refreshToken,type);
+    return AjaxResult.me().setResultObj(accessTokenVo);
+}
+
+@Override
+public AccessTokenVo refresh(String refreshToken,Integer type) {
+    //根据传入的type,得到对应的客户端配置
+    Oauth2ClientDetails clientDetails = properties.getClientDetials(type);
+
+    //1.拼接一个获取oath2的token的url:密码模式
+    String url = String.format(URL_TOKEN_REFRESH, clientDetails.getClientId(),
+            clientDetails.getSecret(),refreshToken);
+    //2.发送请求获取token
+    Map<String, String> map = HttpUtil.sendPost(url);
+    //3.封装结果
+    String tokenJson = JSON.toJSONString(map);
+    return JSON.parseObject(tokenJson,AccessTokenVo.class );
+}
+```
+
+-----
+
+面试题:
+
+1. Token失效了怎么办?
+   - 我们可以做无感刷新
+2. 注销了怎么办?
+   - 删除前端存储的token(包括刷新token)
+3. Token丢失怎么办，别人拿到你的Token来访问你的系统？
+   - 其实这个问题怎么可能嘛,反过来想这个token是保存在我们的浏览器中我的电脑中,如果别人能拿到难道这不就是在黑客入侵我的电脑,难道此时关注的重点是token被拿? 如果是身边的人拿那么我们也可以做一个自动锁屏的功能? 对于一般的用户来讲它都不会去点开F12更不会去操作token!并且会想token是不会暴露给用户的, 因为这是放在请求头中的!
+4. 讲一下你们的认证授权的总体流程?
+   - 首先用户在前端发起表单登录,然后此时就会请求到我们认证服务中,我们拿到账号和密码去通过SpringSecurity去进行认证的一个流程(通过loginDetailService查询),此时我们能拿到用户的权限等信息,然后根据后台自己定义的clientID去客户端参数详情表中查询生成token所需要的参数,然后根据秘钥将权限和参数生成一个密文,这个密文就是token,然后将这个token返回给客户端进存储
+   - 访问资源服务的时候就会携带这个token,然后在资源服务中根据生成token相同的密文进行令牌转换器解析,通过解析后得到权限信息, 进行校验SourceID和scope,如果满足就执行下一步,然后访问到具体的方法上的security的权限注解,那么此时就会进入security的授权的流程,如果满足这个权限就会开放资源,如果不满足那么就会直接拒绝访问!
+   - 
